# aws-ec2-pricing

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ec2pricing/: __init__.py  main.py
